Closed
Bug 356813
Opened 19 years ago
Closed 19 years ago
Add Bookmark shortcut gets confused with the Dvorak-Qwerty keyboard layout
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino1.5
People
(Reporter: st, Assigned: stuart.morgan+bugzilla)
References
Details
(Keywords: fixed1.8.1.1, regression)
Attachments
(1 file)
1.61 KB,
patch
|
froodian
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; chrome://navigator/locale/navigator.properties; rv:1.9a1) Gecko/20061013 Camino/1.2+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; chrome://navigator/locale/navigator.properties; rv:1.9a1) Gecko/20061013 Camino/1.2+
Recently I downloaded a new trunk build of Camino that had the fixes for bug 275170. To my surprise, when I hit Cmd-H to Hide Camino, Camino now pops up a dialog offering to bookmark the current page.
I have my keyboard layout set to Dvorak-Qwerty, so that it works like a Dvorak layout while typing normally, but temporarily switches to Qwerty when I hold down Cmd (so my muscle-memory for keyboard shortcuts doesn't get confused).
Reproducible: Always
Steps to Reproduce:
1. In System Preferences, go to the International Preference Pane, go to the Input Menu tab and enable the Dvorak-Qwerty keyboard layout. (in 10.4, it's about halfway down the list)
2. In the Input menu, make sure 'Dvorak-Qwerty' is the current keyboard layout.
3. Switch to Camino.
4. Press Cmd-H
Actual Results:
Camino drops down the 'Add a bookmark' sheet, just like choosing 'Bookmark current page' from the Bookmarks menu.
Expected Results:
Camino should be hidden.
In the Dvorak layout, D is where the H is in Qwerty, so I'm guessing Camino is saying 'What keycode produces "D"?' then assuming that that keycode in combination with Cmd should be bound to 'Add Bookmark'.
I should note that all the other keyboard shortcuts I can see in the menus work fine. Also, switching back to a standard Qwerty layout makes things behave properly.
It may be necessary to set the keyboard layout to Dvorak-Qwerty before starting Camino, I'm not sure.
Comment 1•19 years ago
|
||
Yeah, this is bug 275170 fallout, from when we changed the keyboard shortcut for "Add Bookmark" to Cmd-K, but kept Cmd-D on for legacy:
http://lxr.mozilla.org/mozilla/source/camino/src/browser/BrowserWindow.mm#134
I don't really know what the correct thing to do here is - I think the inconsistency comes from using |charactersIgnoringModifiers| to get the keycode, but the documentation seems to imply that we'll have trouble with international layouts if we don't use that.
Assignee | ||
Updated•19 years ago
|
Severity: major → normal
Assignee | ||
Comment 2•19 years ago
|
||
This seems like it should work for any layout except one where you can type a 'd' using option, shift, or control, which seems unlikely--and if that's the only way to type a 'd' it wouldn't work under the old method anyway.
Assignee: nobody → stuart.morgan
Status: UNCONFIRMED → ASSIGNED
Attachment #242404 -
Flags: review?(stridey)
Updated•19 years ago
|
Keywords: regression
Target Milestone: --- → Camino1.1
Comment 3•19 years ago
|
||
Comment on attachment 242404 [details] [diff] [review]
just using characters
r=me
Attachment #242404 -
Flags: superreview?(mikepinkerton)
Attachment #242404 -
Flags: review?(stridey)
Attachment #242404 -
Flags: review+
![]() |
||
Comment 4•19 years ago
|
||
Comment on attachment 242404 [details] [diff] [review]
just using characters
sr=pink
Attachment #242404 -
Flags: superreview?(mikepinkerton) → superreview+
Whiteboard: [needs checkin]
Comment 5•19 years ago
|
||
Checked into trunk and 1.8branch
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Comment 6•19 years ago
|
||
*** Bug 357241 has been marked as a duplicate of this bug. ***
I'm typing this from the 2006101922 build and I can verify that this bug is fixed.
Status: RESOLVED → VERIFIED
Updated•19 years ago
|
Keywords: fixed1.8.1.1
Updated•19 years ago
|
Keywords: fixed1.8.1
You need to log in
before you can comment on or make changes to this bug.
Description
•