Add Bookmark shortcut gets confused with the Dvorak-Qwerty keyboard layout. Patch by smorgan <stuart.morgan@alumni.case.edu> r=me sr=pink b=356813